istio-manifests/mtls-strict.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: libro-mind
spec:
  mtls:
    mode: STRICT
