istio-manifests/libro-mind-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: libro-mind-gateway
  namespace: libro-mind
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: libro-mind-virtual-service
  namespace: libro-mind
spec:
  hosts:
  - "*"
  gateways:
  - libro-mind-gateway
  http:
  - match:
    - uri:
        prefix: /admin
    - uri:
        prefix: /api
    route:
    - destination:
        host: backend-service
        port:
          number: 8000
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend-service
        port:
          number: 3000
